--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-body{
-    height: 100vh;
-    background-color: cyan;
+body {
+  height: 100vh;
+  background-color: gold;
 }
 
-.text-huge{
-    font-size: 36px;
+.text-huge {
+  font-size: 36px;
 }
