--- a/src/components/PokemonCard/index.module.scss
+++ b/src/components/PokemonCard/index.module.scss
@@ -1,14 +1,19 @@
 .root {
   width: 351px;
   height: 136px;
+  margin: 0;
+  padding: 0;
   box-shadow: 4px 4px 4px rgba(33, 33, 33, 0.1);
-  background: #f6f7f9;
+  background-color: #f6f7f9;
   border-radius: 8px;
+  text-align: left;
+  border: 0;
   overflow: hidden;
   position: relative;
   //margin-bottom: 45px;
   cursor: pointer;
   transition: all ease-in-out 0.15s;
+  appearance: none;
   &:hover {
     transform: scale(1.03);
     transition: all ease-in-out 0s;
@@ -26,6 +31,7 @@
 .titleName {
   margin-top: 0;
   margin-bottom: 12px;
+  text-align: left;
   text-shadow: 4px 4px 4px rgba(33, 33, 33, 0.1);
 }
 
@@ -71,6 +77,7 @@
   background: linear-gradient(270deg, #b33327 0.15%, #d93e30 100%);
   position: absolute;
   right: 0;
+  top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
